css/style.css
/* ... */
.leading-3{
    line-height: 1.3;
}
.leading-4{
    line-height: 1.4;
}
.leading-5{
    line-height: 1.5;
}

.z-index-1{
    z-index: 1;
}

.hover-scale-in{
    -webkit-transition: transform ease 0.3s !important;
    -moz-transition: transform ease 0.3s !important;
    transition: transform ease 0.3s !important;
}
.hover-scale-in:hover{
    -webkit-transform: scale(1.1) !important;
    -moz-transform: scale(1.1) !important;
    transform: scale(1.1) !important;
}

.shadow-type-1{
    -webkit-box-shadow: 0px 5px 40px rgba(170, 170, 170, 0.19);
    -moz-box-shadow: 0px 5px 40px rgba(170, 170, 170, 0.19);
    box-shadow: 0px 5px 40px rgba(170, 170, 170, 0.19);
}

.rounded-lg {
    border-radius: 1rem;
}

.form-control {
    display: block;
    border-radius: 0;
    background: #fff;
    border: 1px solid #CECECE;
    outline: none;
    min-height: 50px;
    padding: 0.5rem 0.9rem;
    resize: none;
    width: 100%;
    font-size: 1rem;
}
.form-control:active,
.form-control:focus{
    border-color: #009AD4;
    color: #294E89;
}
.form-control.lg{
    font-size: 1.875rem;
}
.form-checkbox{
    border-color: #ADADAD;
    border-radius: 0;
}
.form-select{
    -webkit-appearance: none;
    -moz-appearance: none;
    background-image: url("../images/dropdown_arrow.png");
    background-repeat: no-repeat;
    background-position: right 15px center;
}
::-webkit-input-placeholder { /* Edge */
    color: #ADADAD;
    text-transform: uppercase;
    font-size: 0.9rem;
}
:-ms-input-placeholder { /* Internet Explorer 10-11 */
    color: #ADADAD;
    text-transform: uppercase;
    font-size: 0.9rem;
}
::placeholder {
    color: #ADADAD;
    text-transform: uppercase;
    font-size: 0.9rem;
}


/*** Buttons theming ****/
.btn{
    padding: 0.9375rem 1rem;
    border-radius: 9px;
    font-size: 1.3125rem;
    font-weight: bold;
    text-decoration: none;
    display: inline-block;
    -webkit-transition: all ease 0.3s;
    -moz-transition: all ease 0.3s;
    transition: all ease 0.3s;
    min-width: 130px;
    text-align: center;
}
.btn.rounded{
    border-radius: 20px;
}
.btn-sm{
    font-size: 0.9rem;
    min-width: 0;
}
.btn:hover{
    background-color: var(--tertiary);
}
.btn-primary{
    background-color: var(--primary);
    border-color: var(--primary);
    color: #fff;
}
.btn-primary:hover{
    background-color: var(--secondary);
    border-color: var(--secondary);
    color: #fff;
}
.btn-secondary{
    background-color: var(--secondary);
    border-color: var(--secondary);
    color: #fff;
}
.btn-secondary:hover{
    background-color: var(--primary);
    border-color: var(--primary);
    color: #fff;
}
.btn-tertiary{
    background-color: var(--tertiary);
    border-color: var(--tertiary);
    color: var(--sixth);
}
.btn-tertiary:hover{
    background-color: var(--primary);
    border-color: var(--primary);
    color: #fff;
}
.btn-fourth{
    background-color: var(--fourth);
    border-color: var(--fourth);
    color: #707070;
}
.btn-fourth:hover{
    background-color: var(--secondary);
    border-color: var(--secondary);
    color: #fff;
}
.btn-white{
    background-color: #fff;
    color: var(--primary);
}
.btn-white:hover{
    background-color: var(--primary);
    color: #fff;
}

/*** Header ***/
.header{
    padding-top: 1.75rem;
    padding-bottom: 1.75rem;
}
.header .container{
    max-width: 1500px;
}
.header .row > .col:first-child{
    max-height: 6.5rem;
}


/*** Hero Section ***/
.hero-section{
    background-image: url("../images/hero-bg.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: right center;
    height: 42.125rem;
    font-size: 1.3125rem;
}
.hero-section .container{
    width: 85%;
    max-width: 940px;
}
.hero-section .container p{
    line-height: 1.4;
}
.hero-section .container .btn{
    border-color: #fff;
    border-width: 2px;
    font-size: 1.125rem;
    min-width: 18.4375rem;
    box-shadow: 30px 30px 60px rgba(0,0,0, 0.16);
}


/*** Funds Section ***/
.funds-section{
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
}
.funds-section > .row > .col{
    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#284e8a+0,213f70+100 */
    background: rgb(40,78,138); /* Old browsers */
    background: -moz-linear-gradient(left,  rgba(40,78,138,1) 0%, rgba(33,63,112,1) 100%); /* FF3.6-15 */
    background: -webkit-linear-gradient(left,  rgba(40,78,138,1) 0%,rgba(33,63,112,1) 100%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to right,  rgba(40,78,138,1) 0%,rgba(33,63,112,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#284e8a', endColorstr='#213f70',GradientType=1 ); /* IE6-9 */
    padding: 1.375rem;
}

/*** Our Goal ***/
.our-goal-section{
    padding: 1.8125rem 3rem;
}
.fund-loading{
    border-radius: 11px;
    background: #fff;
    color: var(--fifth-b);
    text-align: center;
    height: 4.1875rem;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    z-index: 1;
    overflow: hidden;
}
.fund-loading.sm{
    height: 34px;
}
.fund-loading .percentage{
    background: #D9F1F5;
    height: 100%;
    position: absolute;
    top: 0;left: 0;
    z-index: -1;
    -webkit-transition: all ease 0.3s;
    -moz-transition: all ease 0.3s;
    transition: all ease 0.3s;
}
.fund-loading *{
    margin: 0;
}


/*** Mendel Section ***/
.blue-background-section{
    background-image: url("../images/blue-background-section.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    padding-bottom: 19.75rem;
    position: relative;
    z-index: 1;
}
.mendel-section{
    background: #F4F4F4;
    padding: 1.3rem 3rem 7.9375rem;
    position: relative;
}
/* ... */

